# osm-rs

./: Cargo.toml  README.md
src/: elements.rs  filter.rs  lib.rs  osmelements.rs  osmparse.rs
src/draw/: drawroute.rs  mod.rs
src/graph/: buildgraph.rs  graphelements.rs  mod.rs  router.rs
src/graph/router/: mod.rs  print.rs  router.rs  twoqueues.rs
src/reader/: filter.rs  mod.rs  osmdownload.rs  osmelements.rs  osmparse.rs
src/writer/: write.rs
