[package]
name = "osmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
error-chain = "0.12.4"
xml-rs = "0.8.4"
petgraph = "0.6.2"
queues = "1.0.2"
map_3d = "0.1.5"
plotters = "0.3.4"
